# garage-management

./: .env_example  .env_test  .gitflic.yaml  .gitignore  README.md  install.sh  pyproject.toml
.gitea/workflows/: pipeline.yaml
backend/: main.py  profiler.py
backend/api/api_v1/: __init__.py
backend/automations/: README.md  automation_example.yaml
backend/collectors/: data_collector.py  mqtt_collector.py
backend/core/: logging.py  settings.py
backend/crud/: actuators.py  layouts.py  plugins.py  sensor.py  sensors.py
backend/db/: database.py
backend/mock/: gpio_adapter.py  mqtt_mock.py
backend/models/: __init__.py  actuators.py  layouts.py  plugins.py  sensor.py  settings.py
backend/plugins/: CSS811_sensor_ex.py  CSS811_sensor_example.py  DS18B20_mux_plugin.py  DS18B20_mux_plugin_example.py  Real_DS18B20_mux_plugin.py  air_quality_sensor_ex.py  air_quality_sensor_example.py  leak_sensor_ex.py  leak_sensor_example.py  template.py  test_actuator.py
backend/schemas/: actuators.py  automations.py  common.py  layouts.py  plugins.py  sensor.py  sensors.py
backend/services/: actuator_manager.py  automations.py  base_collector.py  batch_saver.py  mqtt_client.py  mqtt_helper.py  plugins.py  redis_publisher.py  ws_manager.py
backend/tasks/: data_collector.py  mqtt_collector.py
backend/utils/: automations.py  collector.py  dependencies.py  parser.py  plugins.py
docs/: MQTTdevices.md  architecture.md  deployment.md
frontend/: .env.development  index.html  package-lock.json  package.json
frontend/src/: App.vue  config.ts  i18n.ts  main.ts
frontend/src/api/: actuators.ts  dashboard.ts  devices.ts  plugins.ts  sensors.ts
frontend/src/boot/: axios.ts
frontend/src/components/: ActuatorsList.vue  Chart.vue  Dashboard.vue  DeviceList.vue  FormattedPluginName.vue  PluginList.vue  SensorList.vue  WidgetCard.vue
frontend/src/dialogs/: EditActuator.vue  (+7 more)
frontend/types/: actuators.ts  plugins.ts  sensors.ts
mosquitto/: init-mqtt.sh
redis/data/: dump.rdb  redis.conf
services/docker/: backend.Dockerfile  docker-compose.yaml  docker-compose.yml  frontend.Dockerfile
services/nginx/: default.conf
tests/config/: test_config.py
(+16 files in other folders)
